<resources>
    <string name="app_name">DatabaseDemo</string>
    <string name="ActiveCustomer">Active Customer</string>
    <string name="ViewAll">View all</string>
    <string name="btnAdd">Add</string>
    <string name="CustomerName">Customer Name</string>
    <string name="CustomerAge">Age</string>
    <string name="SwitchActive">Active Customer</string>
    <string name="btnViewAll">View All</string>
    <string name="btn_add">Add</string>
</resources>